--- a/CarConfiguration/WebContent/index.html
+++ b/CarConfiguration/WebContent/index.html
@@ -4,15 +4,13 @@
 <meta charset="UTF-8">
 <title>Cars</title>
 </head>
-<body BGCOLOR="#FDF5E6">
-<p ALIGN="CENTER">
+<body BGCOLOR=#FDF5E6>
+<p ALIGN=CENTER>
 <strong >Welcome to Car Configuration Web!</strong>
-<form method="post" action="carList" ALIGN="CENTER">
-	<br>
-	Are you ready to start to configure your car?
-	<br>
-	<input type="submit" value ="Yes" />
-</form>
 </p>
+<form method="post" action="/CarConfiguration/carList" align=center >
+	<br>Are you ready to start to configure your car<br>
+	<p><input align= center type="submit" value="Yes"></p>
+</form>
 </body>
 </html>
