--- a/CarConfiguration/WebContent/index.html
+++ b/CarConfiguration/WebContent/index.html
@@ -5,12 +5,12 @@
 <title>Cars</title>
 </head>
 <body BGCOLOR=#FDF5E6>
-<p ALIGN=CENTER>
-<strong >Welcome to Car Configuration Web!</strong>
-</p>
-<form method="post" action="/CarConfiguration/carList" align=center >
-	<br>Are you ready to start to configure your car<br>
-	<p><input align= center type="submit" value="Yes"></p>
+<h2 ALIGN="CENTER">
+	<strong >Welcome to Car Configuration Web!</strong>
+</h2>
+<form method="post" action="/CarConfiguration/carList" >
+	<h4 align="center">Are you ready to start to configure your car</h4>
+	<p align= "center" ><input type="submit" value="Yes"></p>
 </form>
 </body>
 </html>
